--- a/IFE2017/task1/css/task1_2_1.css
+++ b/IFE2017/task1/css/task1_2_1.css
@@ -5,8 +5,8 @@ body {
 }
 header {
     background: #333333;
-    height: 60px;
     /*position: relative;*/
+    overflow: hidden;
 }
 header img{
     margin-left:25px;
